Revise content margins, fix results header
Slightly decrease vertical margins of page content.

Fix results header overlapping content when there is no pagination.

--- a/app/Resources/scss/sections/_content.scss
+++ b/app/Resources/scss/sections/_content.scss
@@ -1,12 +1,8 @@
 .content {
     @include column(medium);
-    margin: $grid 0;
+    margin: ($grid  / 2) 0;
     position: relative;
     z-index: 0;
-
-    @include respond-to(medium) {
-        margin: ($grid / 2) 0;
-    }
 
     > :last-child:not(:only-child) {
         margin-bottom: 0;
