--- a/app/Resources/scss/sections/_pagination.scss
+++ b/app/Resources/scss/sections/_pagination.scss
@@ -1,5 +1,5 @@
 .pagination {
-    margin: (-$grid / 2) 0;
+    margin: 0 0 (-$grid / 2);
 }
 
 .pagination_item {
